tests/NormalTests/paczka1/fuzzy1/90814897.err
Error in line 2: YTy5 S683 58,6
Error in line 4: 17ZdrC20 S641 2,3
Error in line 1: fvHoHXfxn S683 30,0
Error in line 10: fvHoHXfxn A11 16,0
Error in line 5: YTy5 A768 84,4
